SaveFiles: Remove BRAN Branding

--- a/Data/User/GameSettings/GMPE01.ini
+++ b/Data/User/GameSettings/GMPE01.ini
@@ -1,9 +1,3 @@
-# ----------------------------------------------------
-# Mario Party Netplay's Mario Party 4 Cheat Database
-# Please visit: https://discord.com/invite/vMNjm98
-# And if you're looking at this, tell Sly hello!
-# ----------------------------------------------------
-
 [Gecko]
 $!!! - README
 *Mario Party 4 cheats can cause the game to set anyone to 999 Coins. Be aware
@@ -60,6 +54,34 @@ c2031b88 0000000c
 7ce903a6 4e800421
 57a0083c 00000000
 *This cheat will display a number on the pause screen of a minigame to see which port paused it.
+*
+$!!! - Unlock Everything [gamemasterplc]
+040310BC 3880FFFF
+20446064 4082002C
+04445FA4 38000001
+0444605C 38000001
+E2000001 80008000
+2044E6DC 40820028
+0444E578 38000001
+0444E6D4 38A00001
+E2000001 80008000
+2044D25C 5400E7FE
+0444D258 380000FF
+0444D198 380000FF
+E2000001 80008000
+2043EDF8 4082002C
+0443EDE8 38A000FF
+0443ED28 380000FF
+E2000001 80008000
+20449684 4082002C
+04449674 38A000FF
+044495B4 380000FF
+E2000001 80008000
+20441D98 2C000001
+04441D94 38000001
+044396FC 38000001
+E2000001 80008000
+*Unlocks Everything
 *
 $Board - Boo's Haunted Bash: Red Boo Always On [gamemasterplc]
 0018fd08 00000000
@@ -181,3 +203,4 @@ $!!! - Increased Board Speed
 $!!! - Increased Taunt Capabilities
 $!!! - Instant Text Display
 $!!! - Show Controller Port Number of Who Paused in Mini-Games
+$!!! - Unlock Everything
