--- a/Data/User/GameSettings/GP6E01.ini
+++ b/Data/User/GameSettings/GP6E01.ini
@@ -1,9 +1,3 @@
-# ----------------------------------------------------
-# Mario Party Netplay's Mario Party 6 Cheat Database
-# Please visit: https://discord.com/invite/vMNjm98
-# And if you're looking at this, tell Sly hello!
-# ----------------------------------------------------
-
 [Gecko]
 $!!! - Faster Boot Time [gamemasterplc]
 204cdc74 386003e8
@@ -58,7 +52,7 @@ $!!! - Instant Text Display [gamemasterplc]
 0404f51c 38000000
 *This cheat makes it so text is displayed instantly.
 *
-$!!! - Miscellaneous - Show Controller Port Number of Who Paused in Mini-Games [gamemasterplc]
+$!!! - Show Controller Port Number of Who Paused in Mini-Games [gamemasterplc]
 c20456d4 00000002
 807f0050 906d0000
 38600000 00000000
@@ -83,6 +77,17 @@ A81F01A0 7C001838
 28000000 41820128
 1400000C 60000000
 E0000000 80008000
+*
+$!!! - Unlock Everything [gamemasterplc]
+F6000001 80008180
+80A405A8 38800001
+14000000 38A0FFFF
+E0000000 80008000
+F6000001 80008180
+80A405A0 38800001
+14000000 38A0FFFF
+E0000000 80008000
+*Unlocks Everything
 *
 $Board - Snowflake Lake - Chomps Sell Stars (40 Coins), Players Start with 0 Stars [gamemasterplc]
 0418040c 480000f0
@@ -239,12 +244,12 @@ $Minigame Replacement - Trap Ease Artist ➜ Pokey Punch-out [gamemasterplc]
 02265ba8  00000014
 e2000001  80008000
 *
-$Minigame Replacement - Trick or Tree ➜ Boo Off the Stage [gamemasterplc] [gamemasterplc]
+$Minigame Replacement - Trick or Tree ➜ Boo Off the Stage [gamemasterplc]
 28265ba8 0000003d
 02265ba8 0000003b
 e2000001 80008000
 *
-$Minigame Replacement - Tricky Tires ➜ Cannonball Fun [gamemasterplc] [gamemasterplc]
+$Minigame Replacement - Tricky Tires ➜ Cannonball Fun [gamemasterplc]
 28265ba8 00000009
 02265ba8 0000000d
 e2000001 80008000
@@ -276,5 +281,6 @@ $!!! - Increased Coin Gain/Loss Speed
 $!!! - Increased Orb Throwing Speed
 $!!! - Increased Taunt Capabilities
 $!!! - Instant Text Display
-$!!! - Miscellaneous - Show Controller Port Number of Who Paused in Mini-Games
+$!!! - Show Controller Port Number of Who Paused in Mini-Games
 $!!! - Super Fast Text Boxes
+$!!! - Unlock Everything
