--- a/Data/User/GameSettings/GP7E01.ini
+++ b/Data/User/GameSettings/GP7E01.ini
@@ -1,8 +1,17 @@
-# ----------------------------------------------------
-# Mario Party Netplay's Mario Party 7 Cheat Database
-# Please visit: https://discord.com/invite/vMNjm98
-# And if you're looking at this, tell Sly hello!
-# ----------------------------------------------------
+[OnLoad]
+# Add memory patches to be loaded once on boot here.
+[OnFrame]
+# Add memory patches to be applied every frame here.
+[ActionReplay]
+$Infinite Mileage
+02510C6A 0000C350
+$Unlock All Minigames
+02291804 0005FFFF
+$Unlock all Souvieners
+002922F8 000001FF
+002922FD 000002FF
+$Unlock All Sounds
+002922FA 000001FF
 [Gecko]
 $!!! - Faster Boot Time [gamemasterplc]
 204dd974 2c030000
@@ -21,7 +30,6 @@ e2000001 80008000
 044e879c 60000000
 e2000001 80008000
 *Use This Cheat to Get into the Action Faster
-*
 $!!! - Increased Board Speed [gamemasterplc]
 041604b0 38c0000a
 204e317c 281e000c
@@ -33,9 +41,13 @@ $!!! - Increased Board Speed [gamemasterplc]
 e2000001 80008000
 *This cheat makes the players move faster while playing a Mario Party board.
 *
+*
+*
 $!!! - Increased Orb Throwing Speed [gamemasterplc]
 041e3110 38030002
 *This cheat makes orbs appear to be thrown faster.
+*
+*
 *
 $!!! - Increased Taunt Capabilities [gamemasterplc]
 04235abc 60000000
@@ -43,9 +55,11 @@ $!!! - Increased Taunt Capabilities [gamemasterplc]
 04235b90 60000000
 *This cheat makes it so you can taunt during your turn.
 *
+*
 $!!! - Instant Text Display [gamemasterplc]
 04050a70 38800000
 *This cheat makes it so text is displayed instantly.
+*
 *
 $!!! - Show Controller Port Number of Who Paused in Mini-Games [gamemasterplc]
 c2047400 00000002
@@ -66,8 +80,10 @@ c20402fc 0000000c
 57a0083c 00000000
 *This cheat will display a number on the pause screen of a minigame to see which port paused it.
 *
+*
 $!!! - Super Fast Text Boxes [Ralf]
 04050ddc 60000000
+*
 *
 $Board - Neon Heights: Balance Changes [gamemasterplc]
 204e0f0c 7c9e2378
@@ -164,7 +180,7 @@ $Board - Windmillville: Free Flower Glider [gamemasterplc]
 044e1efc 386003e7
 044e7d10 38a00000
 e2000001 80008000
-*This cheat makes the Windmillville flower glider free if you have atleast 10 coins.
+*This cheat makes the Windmillville flower glider free assumbing you have more the 10 coins.
 *
 $Bonus - Free Stars [gamemasterplc]
 04188774 3b800000
@@ -179,13 +195,178 @@ e2000001 80008000
 e2000001 80008000
 *This cheat makes Stars cost nothing instead of the usual 20 coins.
 *
+*
 $Bonus - Kill Music [Ralf]
 0414aaf0 4e800020
 *This cheat makes it so all in-game music will be turned off.
 *
+*
 $Bonus - Orbs Can Only Be Placed On Your Current Space [gamemasterplc]
 041e7128 60000000
 *This cheat makes it so Orbs are most balanced. To be fair a human cannot throw that far.
+*
+*
+$Bonus - Unfair Mario Party [CrankySupertoon, gamemasterplc, Ralf]
+04168578 60000000
+0416857c 38800001
+04168600 60000000
+04168604 3880ffec
+04011bbc 386000ff
+04011bc4 386000ff
+04011bcc 386000ff
+0421d4ac 60000000
+c2098fc8 00000002
+3800002e 98030006
+60000000 00000000
+041e3764 3860ffff
+0418bc78 48000090
+0418ccc8 38000003
+0418d1ac 40820020
+041a902c 3ac00014
+041a9a28 38a0ffec
+0419eb0c 48000024
+04274adc 00000001
+06004860 0000002c
+88030000 28000028
+4082001c 3c80802e
+6084f598 38a00010
+4bffecc9 38000028
+98030000 3b9c0001
+481e5098 00000000
+041e991c 4be1af44
+041ac0dc 38030000
+041ac0e8 7c771b78
+0418ccc8 38000003
+0418d1ac 40820020
+0418876c 3b800028
+04188774 3b800028
+28291558 00000000
+02291558 00000002
+e2000001 80008000
+28291558 00000001
+02291558 00000003
+e2000001 80008000
+28291558 00000005
+02291558 00000004
+e2000001 80008000
+28291558 00000009
+02291558 00000008
+e2000001 80008000
+28291558 0000000a
+02291558 0000000b
+e2000001 80008000
+28291558 0000000c
+02291558 00000012
+e2000001 80008000
+28291558 0000000d
+02291558 00000010
+e2000001 80008000
+28291558 00000007
+02291558 0000000f
+e2000001 80008000
+28291558 00000003
+02291558 00000004
+e2000001 80008000
+28291558 00000017
+02291558 00000015
+e2000001 80008000
+28291558 00000018
+02291558 00000019
+e2000001 80008000
+28291558 0000001b
+02291558 0000001f
+e2000001 80008000
+28291558 00000020
+02291558 0000001d
+e2000001 80008000
+28291558 00000016
+02291558 0000001c
+e2000001 80008000
+28291558 00000022
+02291558 00000021
+e2000001 80008000
+28291558 00000023
+02291558 00000029
+e2000001 80008000
+28291558 00000024
+02291558 0000002c
+e2000001 80008000
+28291558 00000026
+02291558 00000028
+e2000001 80008000
+28291558 0000004a
+02291558 0000002a
+e2000001 80008000
+28291558 0000002b
+02291558 00000027
+28291558 0000002e
+02291558 00000039
+e2000001 80008000
+28291558 00000035
+02291558 0000003b
+e2000001 80008000
+28291558 00000032
+02291558 0000003c
+e2000001 80008000
+28291558 0000002e
+02291558 0000002d
+e2000001 80008000
+28291558 0000003a
+02291558 0000003d
+e2000001 80008000
+28291558 00000033
+02291558 00000034
+e2000001 80008000
+28291558 00000049
+02291558 00000048
+e2000001 80008000
+28291558 00000046
+02291558 00000045
+e2000001 80008000
+28291558 00000043
+02291558 00000041
+e2000001 80008000
+28291558 0000003f
+02291558 00000040
+e2000001 80008000
+*Unfair Mario Party is a super Chaotic mode full of sweet Mario Party Tears!
+*
+*This Pack Includes
+*
+*1 Coin Blue Spaces
+*Lose 20 Coin Red Spaces
+*Random Path Decisions
+*Mic ALWAYS On
+*40 Coin Stars
+*Piranha Plant Steals All Coins
+*Hammer Bro Steals 20 Coins
+*1-3 Dice Sluggish
+*Multiple Orbs in the Same Turn
+*Never Possible to Roll The Same Number with the Mushroom
+*
+*And a Crap Ton of Minigame Replacements to Screw with your RNG
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
 *
 $Game Mechanics - All Character Orbs Are Fireball Orb [Ralf]
 041ee17c  38600000
@@ -233,6 +414,7 @@ $Game Mechanics - Can Hold Up To 5 Orbs [Ralf]
 04167ca8 39600005
 041935fc 48000034
 *
+*
 $Game Mechanics - Disable Bowser Time [gamemasterplc]
 c2152080 00000002
 38000000 9803000c
@@ -268,7 +450,7 @@ $Game Mechanics - Hammer Bro Orbs Steal 20 Coins [Ralf]
 041A902C 3AC00014
 041A9A28 38A0FFEC
 *
-$Game Mechanics - Koopa Kid Orbs Can Be Used [gamemasterplc]
+$Game Mechanics - Koopa Kid Orbs Can Be Purchased [gamemasterplc]
 0419eb0c 48000024
 04274adc 00000001
 06004860 0000002c
@@ -305,7 +487,6 @@ $Game Mechanics - Slow 'Shroom Orb Rolls 1-5 [gamemasterplc]
 *
 $Game Mechanics - Use Multiple Orbs in the Same Turn [CrankySupertoon]
 041E3764 3860FFFF
-*This cheat makes it so you can use Multiple Items on the Same Turn.
 *
 $Minigame Replacement - Bridge Work ➜ Mad Props
 28291558 00000034
@@ -352,12 +533,144 @@ $Minigame Replacement - Warp Pipe Dreams ➜ Apes of Wrath
 02291558 00000038
 e2000001 80008000
 *
+*
 $Minigame Replacement: - Pogo-a-Go-Go ➜ Balloonatic
 28291558  00000020
 02291558  00000016
 e2000001  80008000
+$Miscellaneous - Widescreen [gamemasterplc]
+200018a8 9421ff58
+c60a07e0 800018a8
+e2000001 80008000
+200010a8 9421ff58
+c60a07e0 800010a8
+e2000001 80008000
+041555c4 c3a30000
+041794dc 60000000
+040189c4 38600001
+c20a7948 00000003
+93e10024 3fe03fab
+93e30000 c0a30000
+efa50772 00000000
+c20a76c0 00000003
+3fe03fab 93e30000
+c0030000 ef6000b2
+60000000 00000000
+042f3e30 44555555
+042f3ed0 44400000
+0404ef48 c0828110
+04177f94 c0828110
+c20bd108 00000004
+a8830000 2c043b2a
+4082000c 3c80bf40
+9083000c c003000c
+60000000 00000000
+204dfa10 38800100
+c24df9f8 00000006
+3c803fab 9081fffc
+c021fffc c04280c0
+3c808001 608409a0
+7c8903a6 4e800421
+3c804295 9081fffc
+c021fffc 00000000
+e2000001 80008000
+204e5abc 3800ffff
+c24e5a9c 00000002
+3c803f2b 9081fffc
+c021fffc 00000000
+044e7318 c1955555
+e2000001 80008000
+204df4d8 38040040
+c24df4b0 00000005
+ec200828 3ca03fab
+90a100b4 c04100b4
+ec220072 3ca0c2c0
+90a100b4 c04100b4
+ec22082a 00000000
+c24df510 00000002
+3c803f99 9081fffc
+c021fffc 00000000
+e2000001 80008000
+204e7360 43300000
+c24de590 00000006
+3c803fab 9081fffc
+c021fffc c04280c0
+3c808001 608409a0
+7c8903a6 4e800421
+3c80c2d0 9081fffc
+c021fffc 00000000
+044e735c c1180000
+c24e1f20 00000003
+3c60c2c0 9061000c
+c021000c ec3d082a
+d3a10008 00000000
+044e73f0 41000000
+c24e1e0c 00000003
+3c60c2c0 9061000c
+c021000c ec3f082a
+d3e10008 00000000
+e2000001 80008000
+c204dffc 00000008
+3c80804d 6084e634
+80a10064 7c042800
+40820024 3c803fab
+9081fffc c021fffc
+c04280c0 3c808001
+608409a0 7c8903a6
+4e800421 c03f0078
+60000000 00000000
+0401187c 60000000
+c21949c0 00000005
+c03f0014 3c803fab
+9081fffc c041fffc
+ec220072 3c80c2c0
+9081fffc c041fffc
+ec22082a 00000000
+c21937c8 00000005
+c0210008 3c803fab
+9081fffc c041fffc
+ec220072 3c80c2c0
+9081fffc c041fffc
+ec22082a 00000000
+c2194320 00000005
+c03f0014 3c803fab
+9081fffc c041fffc
+ec220072 3c80c2c0
+9081fffc c041fffc
+ec22082a 00000000
+204ea934 fc20f890
+c24ea924 00000005
+c3ff0004 3c803fab
+9081fffc c041fffc
+efe207f2 3c80c2c0
+9081fffc c041fffc
+efe2f82a 00000000
+c24eab40 00000005
+c03f0010 3c803fab
+9081fffc c041fffc
+ec220072 3c80c2c0
+9081fffc c041fffc
+ec22082a 00000000
+e2000001 80008000
+c2046a88 00000005
+c03f0008 3c803fab
+9081fffc c041fffc
+ec220072 3c80c2c0
+9081fffc c041fffc
+ec22082a 00000000
+c216e5f4 00000005
+c0210008 3c603fab
+9061001c c041001c
+ec220072 3c60c2c0
+9061001c c041001c
+ec22082a 00000000
+c22179e4 00000003
+808100dc 1c840004
+38a00003 7c842fd6
+3884ff96 00000000
+*This cheat makes the game appear in widescreen.
 *
-$Mod - 30Hz Code [gamemasterplc]
+$Miscellaneous - 30 Hz
 042f2cf8 40000000
 042f2cfc 00000002
 04045e20 38600001
@@ -374,8 +687,7 @@ c2005ab0 00000009
 c204a98c 00000002
 7c9f2378 7ca50e70
 60000000 00000000
-*Makes the game run at 30Hz but still feel like 60FPS. Great for people with bad PCs
-*Can break Certain Minigames
+*
 *
 [Gecko_Enabled]
 $!!! - Faster Boot Time
@@ -385,3 +697,5 @@ $!!! - Increased Taunt Capabilities
 $!!! - Instant Text Display
 $!!! - Show Controller Port Number of Who Paused in Mini-Games
 $!!! - Super Fast Text Boxes
+[Core]
+SyncGPU = True
