--- a/Data/User/GameSettings/RM8E01.ini
+++ b/Data/User/GameSettings/RM8E01.ini
@@ -1,9 +1,3 @@
-# ----------------------------------------------------
-# Mario Party Netplay's Mario Party 8 Cheat Database
-# Please visit: https://discord.com/invite/vMNjm98
-# And if you're looking at this, tell Sly hello!
-# ----------------------------------------------------
-
 [Gecko]
 $!!! - README
 *Mario Party 8 Cheats can cause the game to stop saving. Be Warned
@@ -601,6 +595,7 @@ $Mod - Remove Explanations
 84200001 80228760
 *
 [Gecko_Enabled]
+$!!! - README
 $!!! - Faster Boot
 $!!! - Increased Board Speed
 $!!! - Increased Taunt Capabilities
