Gecko: Fix Missing Codes

--- a/Data/User/GameSettings/GMPE01.ini
+++ b/Data/User/GameSettings/GMPE01.ini
@@ -1,3 +1,9 @@
+# ----------------------------------------------------	
+# Mario Party Netplay's Mario Party 4 Cheat Database	
+# Please visit: https://discord.com/invite/vMNjm98	
+# And if you're looking at this, tell Sly hello!	
+# ----------------------------------------------------
+
 [Gecko]
 $!!! - README
 *Mario Party 4 cheats can cause the game to set anyone to 999 Coins. Be aware
