--- a/Data/User/GameSettings/GP6E01.ini
+++ b/Data/User/GameSettings/GP6E01.ini
@@ -1,3 +1,9 @@
+# ----------------------------------------------------	
+# Mario Party Netplay's Mario Party 6 Cheat Database	
+# Please visit: https://discord.com/invite/vMNjm98	
+# And if you're looking at this, tell Sly hello!	
+# ----------------------------------------------------
+
 [Gecko]
 $!!! - Faster Boot Time [gamemasterplc]
 204cdc74 386003e8
