--- a/Data/User/GameSettings/RM8E01.ini
+++ b/Data/User/GameSettings/RM8E01.ini
@@ -1,7 +1,15 @@
+# ----------------------------------------------------	
+# Mario Party Netplay's Mario Party 8 Cheat Database	
+# Please visit: https://discord.com/invite/vMNjm98	
+# And if you're looking at this, tell Sly hello!	
+# ----------------------------------------------------
+
 [Gecko]
 $!!! - README
 *Mario Party 8 Cheats can cause the game to stop saving. Be Warned
+*
 *Mario Party 8 Cheats can also cause unintended consiquences due to to hacky nature of specific codes.
+*
 $!!! - Faster Boot [Celerizer]
 20744de4 a003de20
 04744dec 60000000
