--- a/Data/User/GameSettings/GP7E01.ini
+++ b/Data/User/GameSettings/GP7E01.ini
@@ -1,17 +1,9 @@
-[OnLoad]
-# Add memory patches to be loaded once on boot here.
-[OnFrame]
-# Add memory patches to be applied every frame here.
-[ActionReplay]
-$Infinite Mileage
-02510C6A 0000C350
-$Unlock All Minigames
-02291804 0005FFFF
-$Unlock all Souvieners
-002922F8 000001FF
-002922FD 000002FF
-$Unlock All Sounds
-002922FA 000001FF
+# ----------------------------------------------------	
+# Mario Party Netplay's Mario Party 7 Cheat Database	
+# Please visit: https://discord.com/invite/vMNjm98	
+# And if you're looking at this, tell Sly hello!	
+# ----------------------------------------------------
+
 [Gecko]
 $!!! - Faster Boot Time [gamemasterplc]
 204dd974 2c030000
@@ -30,6 +22,7 @@ e2000001 80008000
 044e879c 60000000
 e2000001 80008000
 *Use This Cheat to Get into the Action Faster
+*
 $!!! - Increased Board Speed [gamemasterplc]
 041604b0 38c0000a
 204e317c 281e000c
@@ -41,13 +34,9 @@ $!!! - Increased Board Speed [gamemasterplc]
 e2000001 80008000
 *This cheat makes the players move faster while playing a Mario Party board.
 *
-*
-*
 $!!! - Increased Orb Throwing Speed [gamemasterplc]
 041e3110 38030002
 *This cheat makes orbs appear to be thrown faster.
-*
-*
 *
 $!!! - Increased Taunt Capabilities [gamemasterplc]
 04235abc 60000000
@@ -55,11 +44,9 @@ $!!! - Increased Taunt Capabilities [gamemasterplc]
 04235b90 60000000
 *This cheat makes it so you can taunt during your turn.
 *
-*
 $!!! - Instant Text Display [gamemasterplc]
 04050a70 38800000
 *This cheat makes it so text is displayed instantly.
-*
 *
 $!!! - Show Controller Port Number of Who Paused in Mini-Games [gamemasterplc]
 c2047400 00000002
@@ -80,10 +67,8 @@ c20402fc 0000000c
 57a0083c 00000000
 *This cheat will display a number on the pause screen of a minigame to see which port paused it.
 *
-*
 $!!! - Super Fast Text Boxes [Ralf]
 04050ddc 60000000
-*
 *
 $Board - Neon Heights: Balance Changes [gamemasterplc]
 204e0f0c 7c9e2378
@@ -195,178 +180,13 @@ e2000001 80008000
 e2000001 80008000
 *This cheat makes Stars cost nothing instead of the usual 20 coins.
 *
-*
 $Bonus - Kill Music [Ralf]
 0414aaf0 4e800020
 *This cheat makes it so all in-game music will be turned off.
 *
-*
 $Bonus - Orbs Can Only Be Placed On Your Current Space [gamemasterplc]
 041e7128 60000000
 *This cheat makes it so Orbs are most balanced. To be fair a human cannot throw that far.
-*
-*
-$Bonus - Unfair Mario Party [CrankySupertoon, gamemasterplc, Ralf]
-04168578 60000000
-0416857c 38800001
-04168600 60000000
-04168604 3880ffec
-04011bbc 386000ff
-04011bc4 386000ff
-04011bcc 386000ff
-0421d4ac 60000000
-c2098fc8 00000002
-3800002e 98030006
-60000000 00000000
-041e3764 3860ffff
-0418bc78 48000090
-0418ccc8 38000003
-0418d1ac 40820020
-041a902c 3ac00014
-041a9a28 38a0ffec
-0419eb0c 48000024
-04274adc 00000001
-06004860 0000002c
-88030000 28000028
-4082001c 3c80802e
-6084f598 38a00010
-4bffecc9 38000028
-98030000 3b9c0001
-481e5098 00000000
-041e991c 4be1af44
-041ac0dc 38030000
-041ac0e8 7c771b78
-0418ccc8 38000003
-0418d1ac 40820020
-0418876c 3b800028
-04188774 3b800028
-28291558 00000000
-02291558 00000002
-e2000001 80008000
-28291558 00000001
-02291558 00000003
-e2000001 80008000
-28291558 00000005
-02291558 00000004
-e2000001 80008000
-28291558 00000009
-02291558 00000008
-e2000001 80008000
-28291558 0000000a
-02291558 0000000b
-e2000001 80008000
-28291558 0000000c
-02291558 00000012
-e2000001 80008000
-28291558 0000000d
-02291558 00000010
-e2000001 80008000
-28291558 00000007
-02291558 0000000f
-e2000001 80008000
-28291558 00000003
-02291558 00000004
-e2000001 80008000
-28291558 00000017
-02291558 00000015
-e2000001 80008000
-28291558 00000018
-02291558 00000019
-e2000001 80008000
-28291558 0000001b
-02291558 0000001f
-e2000001 80008000
-28291558 00000020
-02291558 0000001d
-e2000001 80008000
-28291558 00000016
-02291558 0000001c
-e2000001 80008000
-28291558 00000022
-02291558 00000021
-e2000001 80008000
-28291558 00000023
-02291558 00000029
-e2000001 80008000
-28291558 00000024
-02291558 0000002c
-e2000001 80008000
-28291558 00000026
-02291558 00000028
-e2000001 80008000
-28291558 0000004a
-02291558 0000002a
-e2000001 80008000
-28291558 0000002b
-02291558 00000027
-28291558 0000002e
-02291558 00000039
-e2000001 80008000
-28291558 00000035
-02291558 0000003b
-e2000001 80008000
-28291558 00000032
-02291558 0000003c
-e2000001 80008000
-28291558 0000002e
-02291558 0000002d
-e2000001 80008000
-28291558 0000003a
-02291558 0000003d
-e2000001 80008000
-28291558 00000033
-02291558 00000034
-e2000001 80008000
-28291558 00000049
-02291558 00000048
-e2000001 80008000
-28291558 00000046
-02291558 00000045
-e2000001 80008000
-28291558 00000043
-02291558 00000041
-e2000001 80008000
-28291558 0000003f
-02291558 00000040
-e2000001 80008000
-*Unfair Mario Party is a super Chaotic mode full of sweet Mario Party Tears!
-*
-*This Pack Includes
-*
-*1 Coin Blue Spaces
-*Lose 20 Coin Red Spaces
-*Random Path Decisions
-*Mic ALWAYS On
-*40 Coin Stars
-*Piranha Plant Steals All Coins
-*Hammer Bro Steals 20 Coins
-*1-3 Dice Sluggish
-*Multiple Orbs in the Same Turn
-*Never Possible to Roll The Same Number with the Mushroom
-*
-*And a Crap Ton of Minigame Replacements to Screw with your RNG
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
 *
 $Game Mechanics - All Character Orbs Are Fireball Orb [Ralf]
 041ee17c  38600000
@@ -412,8 +232,7 @@ $Game Mechanics - Can Hold Up To 5 Orbs [Ralf]
 041679bc 3be00005
 04167b80 38e00005
 04167ca8 39600005
-041935fc 48000034
-*
+041935fc 4800003
 *
 $Game Mechanics - Disable Bowser Time [gamemasterplc]
 c2152080 00000002
@@ -533,11 +352,11 @@ $Minigame Replacement - Warp Pipe Dreams ➜ Apes of Wrath
 02291558 00000038
 e2000001 80008000
 *
-*
 $Minigame Replacement: - Pogo-a-Go-Go ➜ Balloonatic
 28291558  00000020
 02291558  00000016
 e2000001  80008000
+*
 $Miscellaneous - Widescreen [gamemasterplc]
 200018a8 9421ff58
 c60a07e0 800018a8
@@ -670,7 +489,7 @@ c22179e4 00000003
 3884ff96 00000000
 *This cheat makes the game appear in widescreen.
 *
-$Miscellaneous - 30 Hz
+$Mod - 30 Hz
 042f2cf8 40000000
 042f2cfc 00000002
 04045e20 38600001
@@ -687,7 +506,8 @@ c2005ab0 00000009
 c204a98c 00000002
 7c9f2378 7ca50e70
 60000000 00000000
-*
+*Makes the game run at 30Hz but still feel like 60FPS. Great for people with bad PCs
+*Can break Certain Minigames
 *
 [Gecko_Enabled]
 $!!! - Faster Boot Time
@@ -697,5 +517,3 @@ $!!! - Increased Taunt Capabilities
 $!!! - Instant Text Display
 $!!! - Show Controller Port Number of Who Paused in Mini-Games
 $!!! - Super Fast Text Boxes
-[Core]
-SyncGPU = True
