Small compilation hiccup

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -469,7 +469,7 @@ add_library(core
   PrimeHack/Mods/CutBeamFxMP1.cpp
   PrimeHack/Mods/DisableBloom.h
   PrimeHack/Mods/FpsControls.cpp
-  PrimeHack/Mods/Invulnerability.cpp
+  PrimeHack/Mods/Invulnerability.h
   PrimeHack/Mods/Noclip.cpp
   PrimeHack/Mods/SkipCutscene.h
   PrimeHack/Mods/SpringballButton.cpp
