GameCube Controls UI

--- a/Source/Core/DolphinQt/DolphinQt.vcxproj
+++ b/Source/Core/DolphinQt/DolphinQt.vcxproj
@@ -375,7 +375,8 @@
     <ClCompile Include="Config\Mapping\MappingNumeric.cpp" />
     <ClCompile Include="Config\Mapping\MappingWidget.cpp" />
     <ClCompile Include="Config\Mapping\MappingWindow.cpp" />
-    <ClCompile Include="Config\Mapping\PrimeHackEmuGeneral.cpp" />
+    <ClCompile Include="Config\Mapping\PrimeHackEmuGC.cpp" />
+    <ClCompile Include="Config\Mapping\PrimeHackEmuWii.cpp" />
     <ClCompile Include="Config\Mapping\WiimoteEmuExtension.cpp" />
     <ClCompile Include="Config\Mapping\WiimoteEmuExtensionMotionInput.cpp" />
     <ClCompile Include="Config\Mapping\WiimoteEmuExtensionMotionSimulation.cpp" />
@@ -465,7 +466,8 @@
   <!--Put standard C/C++ headers here. Headers that are listed in the QtMoc ItemGroup must NOT be listed here.-->
   <ItemGroup>
     <ClInclude Include="Config\Mapping\MappingCommon.h" />
-    <ClInclude Include="Config\Mapping\PrimeHackEmuGeneral.h" />
+    <ClInclude Include="Config\Mapping\PrimeHackEmuGC.h" />
+    <ClInclude Include="Config\Mapping\PrimeHackEmuWii.h" />
     <ClInclude Include="Debugger\RegisterColumn.h" />
     <ClInclude Include="Config\Graphics\PrimeWidget.h" />
     <ClInclude Include="QtUtils\ActionHelper.h" />
