--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ install:
 #- "[ $CXX = g++ ] && export CXX=g++-8 || true"
 #- "[ $CXX = clang++ ] && export CXX=clang++-3.8 || true"
 - mkdir -p "$HOME/.ccache"
-- docker pull quriouspixel/yuzu:latest
-- docker run -u root --env-file travis/common/travis-ci.env -v $(pwd):/dolphin -v "$HOME/.ccache":/root/.ccache quriouspixel/yuzu:latest /bin/bash /dolphin/travis/appimage/docker.sh
+- docker pull quriouspixel/yuzu:20.04
+- docker run -u root --env-file travis/common/travis-ci.env -v $(pwd):/dolphin -v "$HOME/.ccache":/root/.ccache quriouspixel/yuzu:20.04 /bin/bash /dolphin/travis/appimage/docker.sh
 script:
   - ls -al
 
