--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,12 +46,12 @@ option(USE_DISCORD_PRESENCE "Enables Discord Rich Presence, show the current gam
 option(ENABLE_ANALYTICS "Enables opt-in Analytics collection" OFF)
 
 # Enable Playback build for Slippi for watching replays
-option(SLIPPI_PLAYBACK "Enable Playback changes" OFF)
+option(SLIPPI_PLAYBACK "Enable Playback changes" ON)
 
 option(ENCODE_FRAMEDUMPS "Encode framedumps in AVI format" ON)
 
 option(ENABLE_GPROF "Enable gprof profiling (must be using Debug build)" OFF)
-option(FASTLOG "Enable all logs" OFF)
+option(FASTLOG "Enable all logs" OFF)	
 option(GDBSTUB "Enable gdb stub for remote debugging." OFF)
 option(OPROFILING "Enable profiling" OFF)
 
