fix windows build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -242,8 +242,6 @@ if(CMAKE_C_COMPILER_ID MATCHES "MSVC")
   add_compile_options(/Zc:throwingNew)
   # Enforce strict volatile semantics as per ISO C++
   add_compile_options(/volatile:iso)
-  # Fix non-conformant lambda behavior (constexpr variables shouldn't need capturing)
-  add_compile_options(/experimental:newLambdaProcessor)
 
   string(APPEND CMAKE_EXE_LINKER_FLAGS " /NXCOMPAT")
 else()
@@ -404,7 +402,7 @@ if(ANDROID)
 endif()
 
 if(LIBRETRO)
-  set(ENABLE_HEADLESS 1)
+  set(USE_DISCORD_PRESENCE 0)
   set(USE_UPNP 0)
   set(ENABLE_ALSA 0)
   set(ENABLE_PULSEAUDIO 0)
@@ -628,7 +626,7 @@ else()
 endif()
 
 pkg_search_module(ZSTD QUIET libzstd)
-if(ZSTD_FOUND)
+if(ZSTD_FOUND AND NOT WIN32)
   message(STATUS "Using shared zstd")
 else()
   check_vendoring_approved(zstd)
