--- a/Externals/hidapi/CMakeLists.txt
+++ b/Externals/hidapi/CMakeLists.txt
@@ -7,7 +7,9 @@ if(APPLE)
   target_sources(hidapi PRIVATE mac/hid.c)
 elseif(WIN32)
   target_sources(hidapi PRIVATE windows/hid.c)
-  target_link_libraries(hidapi PRIVATE winmm setupapi)
+  if(MINGW)
+    target_link_libraries(hidapi PRIVATE winmm setupapi)
+  endif()
 else()
   find_package(Libudev)
   if(CMAKE_SYSTEM_NAME STREQUAL "Linux" AND LIBUDEV_FOUND)
