--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
     
     - name: Install build utilities
       run: |
+        sudo xcode-select -s /Applications/Xcode-beta.app/Contents/Developer
         brew install ninja bartycrouch dpkg s3cmd libmagic dos2unix
         pip3 install polib python-magic
         
@@ -95,6 +96,7 @@ jobs:
     
     - name: Install build utilities
       run: |
+        sudo xcode-select -s /Applications/Xcode-beta.app/Contents/Developer
         brew install ninja bartycrouch dpkg s3cmd libmagic dos2unix
         pip3 install polib python-magic
         
