--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     
     - name: Install build utilities
       run: |
-        sudo xcode-select -s /Applications/Xcode_12_beta.app/Contents/Developer
+        sudo xcode-select -s /Applications/Xcode_12.app/Contents/Developer
         brew install ninja bartycrouch dpkg s3cmd libmagic dos2unix
         pip3 install polib python-magic
         
@@ -96,7 +96,7 @@ jobs:
     
     - name: Install build utilities
       run: |
-        sudo xcode-select -s /Applications/Xcode_12_beta.app/Contents/Developer
+        sudo xcode-select -s /Applications/Xcode_12.app/Contents/Developer
         brew install ninja bartycrouch dpkg s3cmd libmagic dos2unix
         pip3 install polib python-magic
         
