Add caching to Config::Info
The goal of this change is to make Config::Get(const Info<T>&)
super fast so that we can use it in hot paths.

--- a/Source/Core/Common/CMakeLists.txt
+++ b/Source/Core/Common/CMakeLists.txt
@@ -18,13 +18,16 @@ add_library(common
   CommonFuncs.h
   CommonPaths.h
   CommonTypes.h
+  Config/ActiveInfos.cpp
+  Config/ActiveInfos.h
   Config/Config.cpp
   Config/Config.h
-  Config/ConfigInfo.cpp
   Config/ConfigInfo.h
   Config/Enums.h
   Config/Layer.cpp
   Config/Layer.h
+  Config/Location.cpp
+  Config/Location.h
   CPUDetect.h
   Crypto/AES.cpp
   Crypto/AES.h
