LuaJIT scripting POC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -816,6 +816,10 @@ else()
   message(STATUS "libsystemd not found, disabling traversal server watchdog support")
 endif()
 
+find_package(LuaJit)
+include_directories(${LUAJIT_INCLUDE_DIRS})
+
+
 if (WIN32)
   include_directories(Externals/OpenAL/include)
 endif()
