--- a/.editorconfig
+++ b/.editorconfig
@@ -25,3 +25,8 @@ insert_final_newline = false
 indent_size = 4
 indent_style = space
 insert_final_newline = true
+
+[*.lua]
+indent_size = 2
+indent_style = space
+insert_final_newline = true
