iOS: Re-add psychicpaper support for a universal IPA

--- a/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/Entitlements_NJB.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/Entitlements_NJB.plist
@@ -4,5 +4,9 @@
 <dict>
 	<key>get-task-allow</key>
 	<true/>
+  <!---><!-->
+  <key>dynamic-codesigning</key>
+  <true/>
+  <!-- -->
 </dict>
 </plist>
